force-app/main/default/objects/LaborExchangeCommunity_PageProperties__mdt/LaborExchangeCommunity_PageProperties__mdt.object-meta.xml
<CustomObject>
    <label>LaborExchangeCommunity_PageProperties</label>
    <pluralLabel>LaborExchangeCommunity_PageProperties</pluralLabel>
</CustomObject>