force-app/main/default/objects/LaborExchangeCommunity_PageProperties__mdt/fields/Event_Fields_Above_Button__c.field-meta.xml
<CustomField>
    <fullName>Event_Fields_Above_Button__c</fullName>
    <inlineHelpText>Controls how Fields in the Field Set should display above the &quot;Watch Video&quot; or &quot;Register&quot; Buttons.</inlineHelpText>
    <label># Event Fields Above Button</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>