force-app/main/default/objects/LaborExchangeCommunity_PageProperties__mdt/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <inlineHelpText>Controls if the Event Type is &quot;Live&quot; or &quot;On Demand Video&quot;.</inlineHelpText>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On Demand Video</fullName>
                <default>true</default>
                <label>On Demand Video</label>
            </value>
            <value>
                <fullName>Live</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>