force-app/main/default/objects/LaborExchangeCommunity_PageProperties__mdt/fields/Object_API__c.field-meta.xml
<CustomField>
    <fullName>Object_API__c</fullName>
    <inlineHelpText>Controls the Object for the Field Set.</inlineHelpText>
    <label>Object API</label>
    <length>255</length>
    <type>Text</type>
</CustomField>