force-app/main/default/objects/LaborExchangeCommunity_PageProperties__mdt/fields/Page__c.field-meta.xml
<CustomField>
    <fullName>Page__c</fullName>
    <inlineHelpText>Controls the Page that this record supports</inlineHelpText>
    <label>Page/Tab/Object Details</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Company Profile</fullName>
            </value>
            <value>
                <fullName>Company Profile &gt; Contact List</fullName>
            </value>
            <value>
                <fullName>Company Profile &gt; Edit/New Contact Popup</fullName>
            </value>
            <value>
                <fullName>Candidate Applications</fullName>
            </value>
            <value>
                <fullName>Job Tile</fullName>
            </value>
            <value>
                <fullName>Job Details</fullName>
            </value>
            <value>
                <fullName>Job Edit</fullName>
            </value>
            <value>
                <fullName>Candidate Detail</fullName>
            </value>
            <value>
                <fullName>Candidate Tile</fullName>
            </value>
            <value>
                <fullName>My Hires</fullName>
            </value>
            <value>
                <fullName>Matches to My Jobs</fullName>
            </value>
            <value>
                <fullName>Event Details</fullName>
            </value>
            <value>
                <fullName>Event Tile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>