force-app/main/default/objects/LaborExchangeCommunity_PageProperties__mdt/fields/Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Record_Type__c</fullName>
    <inlineHelpText>Controls the Record Type (Label) for the Event.</inlineHelpText>
    <label>Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>