force-app/main/default/objects/LaborExchangeCommunity_PageProperties__mdt/fields/Section_Order__c.field-meta.xml
<CustomField>
    <fullName>Section_Order__c</fullName>
    <inlineHelpText>Controls the Order the Section should appear.</inlineHelpText>
    <label>Section Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>