force-app/main/default/objects/LaborExchangeCommunity_PageProperties__mdt/listViews/All_Page_Properties.listView-meta.xml
<ListView>
    <fullName>All_Page_Properties</fullName>
    <columns>Active__c</columns>
    <columns>MasterLabel</columns>
    <columns>Page__c</columns>
    <columns>Object_API__c</columns>
    <columns>Section_Header__c</columns>
    <columns>Event_Type__c</columns>
    <columns>Record_Type__c</columns>
    <columns>Field_Set__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Page Properties</label>
</ListView>