force-app/main/default/objects/LaborExchangeCommunity_PageProperties__mdt/listViews/Event_Page_Properties.listView-meta.xml
<ListView>
    <fullName>Event_Page_Properties</fullName>
    <columns>Active__c</columns>
    <columns>MasterLabel</columns>
    <columns>Page__c</columns>
    <columns>Event_Type__c</columns>
    <columns>Record_Type__c</columns>
    <columns>Event_Fields_Above_Button__c</columns>
    <columns>Field_Set__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Page__c</field>
        <operation>equals</operation>
        <value>Event Tile,Event Details</value>
    </filters>
    <label>Event Page Properties</label>
    <language>en_US</language>
</ListView>