force-app/main/default/objects/LaborExchangeCommunity_PageProperties__mdt/listViews/Jobs_Page_Properties.listView-meta.xml
<ListView>
    <fullName>Jobs_Page_Properties</fullName>
    <columns>Active__c</columns>
    <columns>Page__c</columns>
    <columns>MasterLabel</columns>
    <columns>Object_API__c</columns>
    <columns>Field_Set__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Page__c</field>
        <operation>equals</operation>
        <value>Job Tile,Job Details</value>
    </filters>
    <label>Jobs Page Properties</label>
    <language>en_US</language>
</ListView>