force-app/main/default/objects/LaborExchangeCommunity_PageProperties__mdt/listViews/My_Applications_Page_Properties.listView-meta.xml
<ListView>
    <fullName>My_Applications_Page_Properties</fullName>
    <columns>Active__c</columns>
    <columns>MasterLabel</columns>
    <columns>Object_API__c</columns>
    <columns>Field_Set__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Page__c</field>
        <operation>equals</operation>
        <value>My Applications</value>
    </filters>
    <label>My Applications Page Properties</label>
    <language>en_US</language>
</ListView>